<resources>
    <!--Nicole Parsons - 300941374 - Section 002-->
    <string name="app_name">NicoleLab3</string>
    <string name="title_home">Paint</string>
    <string name="title_dashboard">Animation Frame-By-Frame</string>
    <string name="title_notifications">Animation Tween</string>
    <string name="nameId" translatable="false">Nicole Parsons - 300941374 - Section 002</string>
    <string name="size3">Small</string>
    <string name="size1">Medium</string>
    <string name="size2">Large</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="alertMessageTitle">Exit</string>
    <string name="alertMessage">Are you sure you want to exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lastNameId" translatable="false">Parsons</string>
    <string name="nicoleFirstName" translatable="false">Nicole</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="Slow">Slow(5 seconds)</string>
    <string name="Normal">Normal(3 seconds)</string>
    <string name="Fast">Fast (2 second)</string>
    <string name="Uber">Uber (1 seconds)</string>
    <string name="clear">Clear</string>
    <string name="imgDescription" translatable="false">Image</string>
    <string name="permission">Permission</string>
    <string name="permissionGranted">Permission granted</string>
    <string name="permissionDenied">Permission denied</string>
    <string name="update">Update</string>
</resources>