<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="nicole.parsons.s300941374.ui.nicole.NicoleFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_nicole" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="nicole.parsons.s300941374.ui.parsons.ParsonsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_parsons" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="nicole.parsons.s300941374.ui.s300941374.S300941374Fragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_s300941374" />
</navigation>
